--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ details {
 	margin-bottom: 2em;
 }
 
+
 /*details > summary {
     list-style-type: '▶️';
 }
@@ -210,8 +211,9 @@ details p {
 .work-div {
 	margin: 1em;
 	padding: 1em;
-	border: 3px solid var(--layout-color);
-	border-radius:  var(--border-radius)
+	border: 3px solid var(--accent-color);
+	border-radius:  var(--border-radius);
+	background-color: var(--bg-color);
 }
 
 .audio-player {
@@ -494,4 +496,41 @@ video {
 
 .resume-date {
 	color: var(--accent-color)
+}
+
+
+
+
+/* Details opening animation  */
+details[open] summary ~ * {
+  animation: details-summary-fade-in 0.7s ease-in-out;
+}
+
+@keyframes details-summary-fade-in {
+    0%    {opacity: 0;}
+  100%  {opacity: 1;}
+}
+
+details[open] {
+  animation: details-bg-color 0.4s ease-in-out;
+}
+
+@keyframes details-bg-color {
+    0%    {background-color: var(--bg-color); border: var(--border-size) solid var(--layout-color);}
+  100%  {background-color: var(--layout-color); border: 3px solid var(--accent-color)}
+}
+
+details[close] {
+  animation: details-bg-color-close 0.5s ease-in-out;
+}
+
+@keyframes details-bg-color-close {
+	0%  {background-color: var(--layout-color); border: 3px solid var(--accent-color)}
+    100%    {background-color: var(--bg-color); border: var(--border-size) solid var(--layout-color);}
+}
+
+
+details[open] {
+	background-color: var(--layout-color);
+	border: 3px solid var(--accent-color);
 }
